bug fix and refactor

--- a/index.HTML
+++ b/index.HTML
@@ -16,12 +16,12 @@
     </header>
     <main>
         <div id="box">
-            <h2>Is your Birthday Palindrome ? 🤔</h2>
+            <h2>Is your Birthday 🎂 Palindrome ? </h2>
             <p>We will not save any of your data</p>
             <input type="date" id="dob">
             <input type="submit" id="check" value="CHECK PALINDROME">
-            <p id="output">Result will apear here
-            </p>
+            <strong><p id="output">Result will apear here
+            </p></strong>
         </div>
     </main>
     <footer>
