--- a/index.HTML
+++ b/index.HTML
@@ -29,7 +29,7 @@
         <span>
            <a href="https://www.linkedin.com/in/ganpat-hada-33abb4227/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
            <a href="https://github.com/GanpatHada" target="_blank"><i class="fa-brands fa-github"></i></a>
-           <a href="" target="_blank"><i class="fa-brands fa-twitter"></i></i></a>
+           <a href="https://twitter.com/ganpat_hada" target="_blank"><i class="fa-brands fa-twitter"></i></i></a>
         </span>
     </footer>
     <script src="index.js"></script>
